2000-06-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-ps.el (mhc-ps/escape-bracket): New function.
	(mhc-ps/schedule-to-string): Add code to handle subjects, which contains brackets.

2000-06-23  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-compat.el (mhc-string-width): New function.
	(mhc-char-width): Ditto.
	(mhc-string-to-list): Ditto.

	* emacs/mhc-ps.el (mhc-ps-truncate-lines): New variable.
	(mhc-ps/substring): New function.
	(mhc-ps/compose-subject): Subject handle as string. Effect mhc-ps-truncate-lines.
	(mhc-ps-preview): Effect default month.
	(mhc-ps-print): Ditto.

2000-06-23  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess/gather-time-list2):
	Fix for Japanese ``Han'' (= 30 minutes).

	* experimental/gp2mhc, experimental/my-meeting2000:
	Add -Ke option to #!/usr/local/bin/ruby line.

	* today, adb2mhc, gemcal, mhc-sync, mhc2palm, palm2mhc: 
	Add -Ke option to #!/usr/local/bin/ruby line.

	* 00todo.jis: updated.

	* 00readme.jis: change file kanji code euc to jis.

2000-06-22  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-calendar.el (mhc-calendar): Requested month displays
		  center position. 
	(mhc-calendar-goto-today): New function.

	* emacs/mhc.el (mhc-input-month): Treat default date option.

	* emacs/mhc-date.el (mhc-date-yymm=): Fix mhc-date-mm's
		  option. (d1, d2) 
	(mhc-date-yymm<): Ditto.

	* emacs/mhc-record.el (mhc-record-write-buffer): Add 'nomsg option
		  when write-region. 
	(mhc-record/append-log): Ditto.

	* emacs/MHC-MK (comment): Change exemplum for Meadow.
	
2000-06-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* 00readme, 00readme.jis: Follow changes in mailing list address
	and URL.

2000-06-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el (mhc-cal-make-rectangle): Follow changes in mhc-day.el.

	* emacs/mhc-summary.el (mhc-summary/today): New variable to speed up.