@@ -1,7 +1,8 @@
 2000-06-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
-	* emacs/mhc-ps.el (mhc-ps/escape-bracket): New function.
-	(mhc-ps/schedule-to-string): Add code to handle subjects, which contains brackets.
+	* emacs/mhc-ps.el (mhc-ps/encode-string): New function.
+	(mhc-ps/schedule-to-string): Add code to handle subjects, which
+	contains special characters of PostScript.
 
 2000-06-23  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
